dinamis grafik
