# app/Http/Requests/Business/CreateBusinessAPIRequest.php
@@ -16,10 +16,15 @@ class CreateBusinessAPIRequest extends FormRequest
      */
     public function rules()
     {
+        $input = $this->all();
         return [
             'name' => $this->getNameRules(),
             'address' => $this->getAddressRules(),
             'business_category_id' => $this->getBusinessCategoryIdRules(),
+            'province_id' => $this->getProvinceIdRules(),
+            'city_id' => $this->getCityIdRules($input),
+            'district_id' => $this->getDistrictIdRules($input),
+            'village_id' => $this->getVillageIdRules($input),
         ];
     }
 }
