# app/Http/Requests/Business/WriteRuleTrait.php
@@ -4,6 +4,11 @@ namespace App\Http\Requests\Business;
 
 use App\Models\Business;
 use App\Models\BusinessCategory;
+use App\Models\City;
+use App\Models\District;
+use App\Models\Province;
+use App\Models\Village;
+use Illuminate\Validation\Rule;
 
 trait WriteRuleTrait
 {
@@ -41,6 +46,41 @@ trait WriteRuleTrait
         return [
             'required',
             'exists:'. BusinessCategory::class . ',id'
+        ];
+    }
+
+    public function getProvinceIdRules(): array
+    {
+        return [
+            'required',
+            'exists:'. Province::class . ',id'
+        ];
+    }
+
+    public function getCityIdRules(array $input): array
+    {
+        return [
+            'required',
+            Rule::exists(City::class, 'id')
+                    ->where('province_id', $input['province_id']),
+        ];
+    }
+
+    public function getDistrictIdRules(array $input): array
+    {
+        return [
+            'required',
+            Rule::exists(District::class, 'id')
+                    ->where('city_id', $input['city_id']),
+        ];
+    }
+
+    public function getVillageIdRules(array $input): array
+    {
+        return [
+            'required',
+            Rule::exists(Village::class, 'id')
+                    ->where('district_id', $input['district_id']),
         ];
     }
 
